--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
  <meta charset="UTF-8">
 <title>Azeez Personal site </title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body> 
     <table cellspacing="5">
         <tr>
             <td><img src="wag.jpeg" alt="My picture" height="150" width="150"></td>
             <td><h1>Wahab Azeez Gbolade</h1>
-                <p>I am an <strong>aspiring Game Developer start out with web development</strong> </p> <br>
+                <p>I am an <strong>aspiring Web Developer start out with web development</strong> </p> <br>
                 <a href="contact.html">Contact Information</a>
             </td>
         </tr>
@@ -48,18 +49,29 @@
     <ul>
         <li>English (fluent) and Yoruba (native)</li>
         <li>Advanced MS Office (Word, PowerPoint, Excel)</li>
-        <li>Basic HTML and CSS  Web Design</li>
+        <li>HTML and CSS  Web Design</li>
     </ul>
 
     <h3>Interest</h3>
     <ul>
-        <li>Game Development</li>
+        <li>Technology Improvement</li>
         <li>Advanced Web Development</li>
         <li>Food Production</li>
     </ul>
 <hr>
 <h3>Work Experience</h3>
 <table>
+    <tr>
+        <td>International Institute of Tropical Agriculture <br>September 2021 – August 2022</td>
+        <td>
+            <ul>
+                <li>Major Pre-planting and Post Planting Operation of Cassava Plot</li>
+                <li>Research assitance in on-field and off-field dutuie</li>
+                <li>Data Collection (Using PhenoApps)</li>
+                <li>Agricultural extension services to Rural communities</li>
+            </ul>
+        </td>
+    </tr>
     <tr>
         <td> Community Based Farming Scheme (COBFAS) <br>April 2018 – January 2019</td>
         <td>
