--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <tr>
             <td><img src="wag.jpeg" alt="My picture" height="150" width="150"></td>
             <td><h1>Wahab Azeez Gbolade</h1>
-                <p>I am an <strong>aspiring Web Developer start out with web development</strong> </p> <br>
+                <p>I am an <strong>aspiring Scientist looking forward to contributing to technological advancement </strong> </p> <br>
                 <a href="contact.html">Contact Information</a>
             </td>
         </tr>
